--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>Chat Application</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script type="module" src="/index.js"></script>
     <div id="root"></div>
   </body>
 </html>
